Fixed navbar overlap issue

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
             color: #333;
             background: #0a0a0a;
             overflow-x: hidden;
-            margin-top: 70px; 
+            
         }
 
         /* Navigation */
@@ -91,7 +91,7 @@
             color: white;
             position: relative;
             overflow: hidden;
-            padding-top: 70px;
+           
         }
 
         .hero::before {
